@@ -66,6 +66,7 @@
 * Patch 3466877: Removed -flat_namespace from Mac OS X flags (Konstantin Tokarev)
 * Pull 25: Add Unix support to os.getversion() (wfgleper)
 * Bug 268: Target extension not set properly for Visual Studio 2010
+* Allow command line override of makefile flags (Cameron Hart)
 
 
 -------
